<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InMotion</string>               
    
    <string-array name="nav_drawer_items">
        <item >Home</item>               
        <item >Ads Space</item>
        <item >Our Reach</item>
        <item >Clients</item>
        <item >Awards</item>        
        <item >Team</item>
        <item >About</item>      
    </string-array>
    
    <string-array name="reach_state">
        <item >Uttar Pradesh</item>
        <item >Bihar</item>
        <item >UK</item>        
    </string-array>
    
    <string-array name="reach_1">
        <item >Lucknow,15000</item>
        <item >Kanpur,10000</item>
        <item >Varanasi,8000</item>        
    </string-array>
    <string-array name="reach_2">
        <item >Patna,8000</item>
        <item >Gaya,8000</item>               
    </string-array>
    <string-array name="reach_3">
        <item >Nainital,8000</item>
        <item >Dehradun,8000</item>
        <item >Haldwani,8000</item>
    </string-array>
    
    <string-array name="client_names">
        <item >Akash Institute</item>
        <item >HCBL Bank</item>
        <item >SBI Bank</item>
        <item >Career Launcher</item>
        <item >T.I.M.E.</item>
        <item >UCO Bank</item>
        <item >IMS</item>
        <item >NACO</item>
        <item >Uninor</item>        
    </string-array>
    <string-array name="client_desc">
        <item ></item>
        <item ></item>
        <item ></item>
        <item ></item>
        <item ></item>
        <item ></item>
        <item ></item>
        <item ></item>
        <item ></item>        
    </string-array>
    
    <string-array name="awards_name">
        <item >NEN India</item>
        <item >GSEA</item>
        <item >Dare Mag</item>
        <item >Your Story</item>
        <item >Wadhwani Foundation</item>
    </string-array>
    <string-array name="awards_desc">
        <item >Top 30 Student Entrepreneur of India</item>
        <item >Top 3 Graduate Finalist at\n the GSEA 2011.</item>
        <item >Awarded by Dare Mag</item>
        <item >Acknownledged by Your Story</item>
        <item >Awarded by Wadhwani Foundation</item>
    </string-array>
    
    <string-array name="team_member_names">
        <item >Durgesh Nandan</item>
        <item >Pramod Joshi</item>
        <item >Jaiditya Mathur</item>
        <item >Yuvish Singh</item>
    </string-array>
    <string-array name="team_member_desc">
        <item >Team Head</item>
        <item >Mentor</item>
        <item >Technical Support</item>
        <item >Marketing Head</item>
    </string-array>
            
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="text_about">
        Inmotion Media is the fastest growing company in transit media space. Company has largest Autorickshaw-Ad network in India, having 20,000+ autos under the umbrella offering in more than 50 tier-ll and lll cities. Started by passionate young entrepreneurs to change the face of auto-rickshaw industry by offering organised advertisement on auto-rickshaws and working for the welfare of the Auto-rickshaw drivers\' community. Won many accolades on national and international level for the unique socio-economic business model.
    </string>
    <string name="lkmhr">Lokesh Mehra (@lkmhr)</string>
    <string name="vjitp">Vishvajit Pandey (@vjitp)</string>
    <string name="business_head_name">Durgesh Nandan</string>
    <string name="business_head_contact">+91–739–875–3559</string>
    <string name="business_head_mail">durgesh@inmotion.in</string>
    <string name="in_motion">InMotion</string>

    <string name="button_click_image">Click</string>
    <string name="button_upload_image">Gallery</string>
    
    <string name="button_book">Call to Book</string>
</resources>
